--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "langgraph>=0.4.8",
     "pinecone>=7.0.2",
     "pydantic>=2.11.7",
+    "pydantic-settings>=2.9.1",
     "pypdf>=5.6.0",
     "python-dotenv>=1.1.0",
     "streamlit>=1.45.1",
