--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "langchain-core>=0.3.65",
     "langchain-openai>=0.3.23",
     "langchain-pinecone>=0.2.8",
+    "langchain-text-splitters>=0.3.8",
     "langgraph>=0.4.8",
     "pinecone>=7.0.2",
     "pydantic>=2.11.7",
