--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "duckduckgo-search>=8.0.4",
+    "ipython>=9.3.0",
     "langchain>=0.3.25",
     "langchain-community>=0.3.25",
     "langchain-core>=0.3.65",
